--- a/webservify/src/App.css
+++ b/webservify/src/App.css
@@ -17,6 +17,12 @@
   color: #61dafb;
 }
 
+Input[type=number]::-webkit-inner-spin-button,
+Input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
